--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
     <link rel="icon" href="https://www.jhf.go.jp/favicon.ico">
-    <title>住宅金融支援機構様チャットボット</title>
+    <title>チャットボット</title>
     <meta charset="UTF-8" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
