--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <script src="static-cognigy/init-webchat.js"></script>
     <script>
         // URLはCognigyチャットボットのエンドポイント
-        initMyWebchat("https://cognigy-v4-ep.scorobo.ai/ef5cb9e840b896b7e66dee98a7ece74ab4b5ae12d2d151c208a1f8e5e44e0e9d");
+        //initMyWebchat("https://cognigy-v4-ep.scorobo.ai/ef5cb9e840b896b7e66dee98a7ece74ab4b5ae12d2d151c208a1f8e5e44e0e9d");
+        initMyWebchat("https://cognigy-v4-ep.scorobo.ai/a147ed3fbf3b361db95a48ee2a077a7f995c6c6e6c521a40aa73c5ce2c7685c8");
     </script>
 
     <!-- ユーザーのメッセージにフォーカス -->
