--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         initMyWebchat("https://cognigy-v4-ep.scorobo.ai/a147ed3fbf3b361db95a48ee2a077a7f995c6c6e6c521a40aa73c5ce2c7685c8");
     </script>
 
-    <!-- ユーザーのメッセージにフォーカス -->
+    <!-- ユーザーのメッセージにフォーカス
     <script src="static-cognigy/focus-webchat.js"></script>
+     -->
 
     <!-- Cognigyチャットボットのスタイルをロード -->
     <link rel="stylesheet" href="static-cognigy/cognigy-style.css">
