--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Webchat Widgetをロード -->
-    <script src="webchat_v2.66.1.js"></script>
+    <script src="webchat.js"></script>
 
     <!-- Webchatを初期化 -->
     <script src="static-cognigy/init-webchat.js"></script>
